# AI-Algorithms-Implementation

./: .gitignore  README.md  fashion_mnist.model  fashion_mnist.parms  plot_data.py  pyproject.toml  testing_metrics.json  training_history.json
notebooks/: Regression.ipynb  main.ipynb
notebooks/Regression/LinearRegression/raw_solution/: main.ipynb
notebooks/Regression/LinearRegression/sklearn_solution/: main.ipynb
src/: exp.ipynb  exp.py  main.ipynb  main.py
src/MachineLearning/: commons.py  losses.py  models.py  optimizers.py
src/MachineLearning/tests/: test_models.py
src/ml/: commons.py  losses.py  models.py
src/ml/tests/: test_losses.py
src/network/: accuracys.py  activations.py  commons.py  gen_data.py  layers.py  losses.py  metrics.py  models.py  optimizers.py
src/neural_nets/: gen_data.py  models.py  optimizers.py
