[tool.poetry]
name = "revnine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
nnfs = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
