[tool.poetry]
name = "revnine"
version = "0.1.0"
description = ""
authors = ["sampath017 <118274231+sampath017@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
nnfs = "^0.5.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pylint = "^2.16.2"
tensorflow = "^2.11.0"
matplotlib = "^3.7.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
